# bevy_project_template

./: Cargo.toml  README.md
src/: main.rs
