[package]
name = "bevy_project_template" # TODO: change the name of the project
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Remove dynamic linking on release
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
# bevy = "0.13.2"
bevy_embedded_assets = "0.10.2"
bevy-inspector-egui = "=0.24.0"
# TODO: use bevy asset loader
